--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "cos-nodejs-sdk-v5": "^2.14.3",
     "express": "^4.16.4",
