--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
+    "node-fetch": "^2.6.7",
     "sequelize": "^6.8.0"
   },
   "engines": {
