--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
     "node-fetch": "^2.6.7",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.8.0",
+    "request": "^2.88.2"
   },
   "engines": {
     "node": ">=12.0.0"
